#183 - refactor